[build-system]
requires = [
    "setuptools>=75",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ledgercomm/__version__.py"
local_scheme = "no-local-version"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
