[metadata]
name = ledgercomm
author = Ledger
author_email = hello@ledger.fr
description = Library to communicate with Ledger Nano S/X and Speculos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/ledgercomm
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/ledgercomm/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.8
zip_safe = True

[options.extras_require]
hid=
    hidapi>=0.9.0.post3

[options.entry_points]
console_scripts=
    ledgercomm-send = ledgercomm.cli.send:main


[pylint]
extension-pkg-whitelist=hid
disable = C0103,  # invalid-name
          R0801,  # duplicate-code
          R0913   # too-many-arguments

[pycodestyle]
max-line-length = 100
